[gd_scene load_steps=9 format=3 uid="uid://bpgndgt1oy8r3"]

[ext_resource type="Script" path="res://player/gun/bullets/dynamite/dynamite.gd" id="1_pa4lh"]
[ext_resource type="Texture2D" uid="uid://fb1msiylgjtc" path="res://player/gun/bullets/dynamite/dynamite.png" id="2_pefc3"]
[ext_resource type="AudioStream" uid="uid://b1ooitkb0veuk" path="res://player/gun/bullets/dynamite/explosion.wav" id="3_32qub"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5n58v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sxexo"]
radius = 200.0

[sub_resource type="Animation" id="Animation_6m0wd"]
resource_name = "explode"
length = 0.51
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSoundEffect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.51),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_4nv5e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_udko1"]
_data = {
"RESET": SubResource("Animation_4nv5e"),
"explode": SubResource("Animation_6m0wd")
}

[node name="Dynamite" type="RigidBody2D"]
collision_layer = 0
collision_mask = 2
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_pa4lh")
despawn_delay = 1.0

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5n58v")

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Sprite" type="Sprite2D" parent="."]
z_index = -2
texture = ExtResource("2_pefc3")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_sxexo")

[node name="ExplosionSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_32qub")

[node name="ExplosionAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_udko1")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
